blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Lease__c/Lease__c.object-meta.xml
<CustomObject>
    <description>One signed lease of space in a property: tenant, rent, term, break and expiry dates. Created when a letting completes. This is the management side, separate from the letting deal.</description>
    <label>Lease</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>