blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Lease__c/fields/Annual_rent__c.field-meta.xml
<CustomField>
    <fullName>Annual_rent__c</fullName>
    <description>Passing rent per year.</description>
    <label>Annual rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>