blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Lease__c/fields/Area_sqft__c.field-meta.xml
<CustomField>
    <fullName>Area_sqft__c</fullName>
    <description>Floor area let.</description>
    <label>Area (sq ft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>