blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Lease__c/fields/Break_date__c.field-meta.xml
<CustomField>
    <fullName>Break_date__c</fullName>
    <description>Earliest date the tenant or landlord may end the lease early, if there is a break clause.</description>
    <label>Break date</label>
    <type>Date</type>
</CustomField>