blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Lease__c/fields/Expiry_date__c.field-meta.xml
<CustomField>
    <fullName>Expiry_date__c</fullName>
    <description>Contractual end date. A renewal opens before it.</description>
    <label>Expiry date</label>
    <type>Date</type>
</CustomField>