blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Lease__c/fields/Letting_deal__c.field-meta.xml
<CustomField>
    <fullName>Letting_deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links a lease to the deal that created it, for fee reporting.</description>
    <label>Letting deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Leases</relationshipLabel>
    <relationshipName>Leases</relationshipName>
    <type>Lookup</type>
</CustomField>