blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Lease__c/fields/Managing_owner__c.field-meta.xml
<CustomField>
    <fullName>Managing_owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The team member who manages this lease and its renewal.</description>
    <label>Lease manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Leases Lease manager</relationshipLabel>
    <relationshipName>Lease_Managing_owner</relationshipName>
    <type>Lookup</type>
</CustomField>