blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Lease__c/fields/Next_rent_review__c.field-meta.xml
<CustomField>
    <fullName>Next_rent_review__c</fullName>
    <description>Date the rent is next reviewed.</description>
    <label>Next rent review</label>
    <type>Date</type>
</CustomField>