blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Lease__c/fields/Outcome_reason__c.field-meta.xml
<CustomField>
    <fullName>Outcome_reason__c</fullName>
    <description>Why a lease was not renewed. Required on the lost renewal stage.</description>
    <label>Outcome reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tenant relocated</fullName>
            </value>
            <value>
                <fullName>Downsized</fullName>
            </value>
            <value>
                <fullName>Business closed</fullName>
            </value>
            <value>
                <fullName>Rent too high</fullName>
            </value>
            <value>
                <fullName>Landlord redevelopment</fullName>
            </value>
            <value>
                <fullName>Space unsuitable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>