blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Lease__c/fields/Rent_free_months__c.field-meta.xml
<CustomField>
    <fullName>Rent_free_months__c</fullName>
    <description>Months of rent-free incentive granted at the start.</description>
    <label>Rent-free months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>