blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Lease__c/fields/Security_of_tenure__c.field-meta.xml
<CustomField>
    <fullName>Security_of_tenure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The lease has statutory renewal rights. This changes how renewal is handled. Confirm with the solicitor.</description>
    <label>Inside security of tenure</label>
    <type>Checkbox</type>
</CustomField>