blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Lease__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <description>Where the record is in its pipeline. Restricted to the pipeline's stages.</description>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upcoming</fullName>
            </value>
            <value>
                <fullName>Tenant contacted</fullName>
            </value>
            <value>
                <fullName>Terms discussed</fullName>
            </value>
            <value>
                <fullName>Renewal agreed</fullName>
            </value>
            <value>
                <fullName>Renewed</fullName>
            </value>
            <value>
                <fullName>Not renewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>