blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Lease__c/fields/Start_date__c.field-meta.xml
<CustomField>
    <fullName>Start_date__c</fullName>
    <description>First day of the term.</description>
    <label>Start date</label>
    <type>Date</type>
</CustomField>