blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Lease__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shows the tenant's leases and so their footprint with us.</description>
    <label>Tenant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leases as tenant</relationshipLabel>
    <relationshipName>Leases_as_tenant</relationshipName>
    <type>Lookup</type>
</CustomField>