blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Lease__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <description>Floor, suite or unit let under this lease.</description>
    <label>Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>