blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Lease__c/validationRules/Gate_lease_renewal_renewed.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_lease_renewal_renewed</fullName>
    <active>true</active>
    <description>Stage gate: Lease renewal, Renewed and later stages need Annual rent and Expiry date.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Upcoming", 1, "Tenant contacted", 2, "Terms discussed", 3, "Renewal agreed", 4, "Renewed", 5, 0) &gt;= 5, OR(ISBLANK(Annual_rent__c), ISBLANK(Expiry_date__c)))</errorConditionFormula>
    <errorMessage>Fill in Annual rent and Expiry date before moving to Renewed.</errorMessage>
</ValidationRule>