blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Lease__c/validationRules/Gate_lease_renewal_terms_discussed.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_lease_renewal_terms_discussed</fullName>
    <active>true</active>
    <description>Stage gate: Lease renewal, Terms discussed and later stages need Annual rent and Inside security of tenure.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Upcoming", 1, "Tenant contacted", 2, "Terms discussed", 3, "Renewal agreed", 4, "Renewed", 5, 0) &gt;= 3, OR(ISBLANK(Annual_rent__c), NOT(Security_of_tenure__c)))</errorConditionFormula>
    <errorMessage>Fill in Annual rent and Inside security of tenure before moving to Terms discussed.</errorMessage>
</ValidationRule>