blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Lease__c/validationRules/Gate_lease_renewal_upcoming.validationRule-meta.xml
<ValidationRule>
    <fullName>Gate_lease_renewal_upcoming</fullName>
    <active>true</active>
    <description>Stage gate: Lease renewal, Upcoming and later stages need Expiry date.</description>
    <errorConditionFormula>AND(CASE(Stage__c, "Upcoming", 1, "Tenant contacted", 2, "Terms discussed", 3, "Renewal agreed", 4, "Renewed", 5, 0) &gt;= 1, ISBLANK(Expiry_date__c))</errorConditionFormula>
    <errorDisplayField>Expiry_date__c</errorDisplayField>
    <errorMessage>Fill in Expiry date before moving to Upcoming.</errorMessage>
</ValidationRule>