blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Lease__c/validationRules/Lost_lease_renewal_not_renewed.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_lease_renewal_not_renewed</fullName>
    <active>true</active>
    <description>Lost reason: Lease renewal, Not renewed needs Outcome reason.</description>
    <errorConditionFormula>AND(ISPICKVAL(Stage__c, "Not renewed"), ISBLANK(TEXT(Outcome_reason__c)))</errorConditionFormula>
    <errorDisplayField>Outcome_reason__c</errorDisplayField>
    <errorMessage>Fill in Outcome reason before closing this as Not renewed.</errorMessage>
</ValidationRule>