blueprints/real-estate-commercial/salesforce/force-app/main/default/objects/Lease__c/listViews/Rent_reviews_due.listView-meta.xml
<ListView>
    <fullName>Rent_reviews_due</fullName>
    <columns>NAME</columns>
    <columns>Stage__c</columns>
    <columns>Next_rent_review__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Next_rent_review__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Next_rent_review__c</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_N_MONTHS:6</value>
    </filters>
    <label>Rent reviews due</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>